fixed spacing for state and changed id currentCity to class currentCity

--- a/browser/scss/directives/navbar.scss
+++ b/browser/scss/directives/navbar.scss
@@ -44,7 +44,7 @@ a {
    clear: none;
 }
 
-#currentCity {
+.currentCity {
   float: right;
   clear: right;
   display: block;
